log

Thu 14 Mar 2024 02:55:04 PM UTC: 
 exercises.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 64 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:97:5: error: expected expression before ‘}’ token
   97 |     }
      |     ^
Compilation failed
f7aa6b9
Thu 14 Mar 2024 02:56:07 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   19 |   return max; }
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
ecb06cf
Thu 14 Mar 2024 02:56:54 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   19 |   return max; }
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
28ec53e
Thu 14 Mar 2024 02:59:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
2ec76f5
Thu 14 Mar 2024 03:00:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
24dc17b
Thu 14 Mar 2024 03:02:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
4d38ca2
Thu 14 Mar 2024 03:03:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
8cc5b17
Thu 14 Mar 2024 03:03:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
0d5abe0
Thu 14 Mar 2024 03:08:13 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|3
total_score: 40/70
d9d6e7b
Thu 14 Mar 2024 03:08:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
3cac767
Fri 15 Mar 2024 01:45:51 AM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|2
total_score: 50/70
49b6649
Fri 15 Mar 2024 01:51:37 AM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:105:50: error: unused variable ‘sinOrden’ [-Werror=unused-variable]
  105 |   unsigned short menorMayor = 0, mayorMenor = 0, sinOrden = 0;
      |                                                  ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dbf358a
Fri 15 Mar 2024 01:51:47 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
fb15151
Fri 15 Mar 2024 01:52:25 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
6fc1f8e
Fri 15 Mar 2024 01:53:25 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
d265e0a
Fri 15 Mar 2024 01:54:11 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
261c588
Fri 15 Mar 2024 02:15:40 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:169:13: error: invalid type argument of ‘->’ (have ‘Nodo’ {aka ‘struct nodo’})
  169 |     lista[i]->numero = arr[i];
      |             ^~
exercises.c:170:13: error: invalid type argument of ‘->’ (have ‘Nodo’ {aka ‘struct nodo’})
  170 |     lista[i]->siguiente = NULL;
      |             ^~
exercises.c:172:10: error: invalid type argument of unary ‘*’ (have ‘Nodo’ {aka ‘struct nodo’})
  172 |   return *lista[0]; }
      |          ^~~~~~~~~
exercises.c:172:21: error: control reaches end of non-void function [-Werror=return-type]
  172 |   return *lista[0]; }
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
ba72803
Fri 15 Mar 2024 02:16:15 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:172:10: error: invalid type argument of unary ‘*’ (have ‘Nodo’ {aka ‘struct nodo’})
  172 |   return *lista[0]; }
      |          ^~~~~~~~~
exercises.c:172:21: error: control reaches end of non-void function [-Werror=return-type]
  172 |   return *lista[0]; }
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
2ebd1ba
Fri 15 Mar 2024 02:16:37 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:172:10: error: incompatible types when returning type ‘Nodo’ {aka ‘struct nodo’} but ‘Nodo *’ {aka ‘struct nodo *’} was expected
  172 |   return *lista; }
      |          ^~~~~~
exercises.c:172:18: error: control reaches end of non-void function [-Werror=return-type]
  172 |   return *lista; }
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
161ddb2
Fri 15 Mar 2024 02:16:42 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
test.c: In function ‘crearListaEnlazada’:
exercises.c:172:10: error: ‘lista’ is used uninitialized [-Werror=uninitialized]
  172 |   return lista; }
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
51b39b7
Fri 15 Mar 2024 02:49:22 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
Fri 15 Mar 2024 02:49:33 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
5da6c8f
Sun 17 Mar 2024 12:20:10 AM UTC: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  0|1
total_score: 60/70
804bc05
Sun 17 Mar 2024 12:27:03 AM UTC: 
 exercises.c | 30 ++++++++++++------------------
 1 file changed, 12 insertions(+), 18 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:75:28: error: ‘k’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   75 |         if (arr1[j] <= arr2[k])
      |                            ^
exercises.c:78:12: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |           j++;
      |           ~^~
cc1: all warnings being treated as errors
Compilation failed
9dff77e
Sun 17 Mar 2024 12:27:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
79df54d
Sun 17 Mar 2024 12:28:00 AM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
b928949
Sun 17 Mar 2024 12:39:40 AM UTC: 
 exercises.c | 13 -------------
 1 file changed, 13 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a6f73ca
Sun 17 Mar 2024 12:45:53 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
c651a6e
Sun 17 Mar 2024 12:48:59 AM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
14cbdc7
Sun 17 Mar 2024 01:11:12 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
1e43ed7
Sun 17 Mar 2024 01:11:45 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
eea466e
Sun 17 Mar 2024 01:22:34 AM UTC: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:164:18: error: incompatible types when assigning to type ‘Nodo’ {aka ‘struct nodo’} from type ‘Nodo *’ {aka ‘struct nodo *’}
  164 |     *nuevoNodo = (Nodo *)malloc((i+1) * sizeof(Nodo));
      |                  ^
Compilation failed
fb3d7f9
